--- a/paper/src/main.tex
+++ b/paper/src/main.tex
@@ -4,7 +4,7 @@
 \title{curvepy: Bézier Curves, Delaunay Triangulations and Voronoi Diagrams}
 %\title{What cagd authors don't want you to know (Number 3.3.5 will suprise you)}
 \author{NumerikGang\\Lars Quentin, Maximilian Winkler, Timo Specht}
-\date{\today}
+\date{July 11, 2022}
 
 \usepackage[
 backend=biber,
